# nasty

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix
dnote/: Cargo.toml
nasty/: Cargo.toml
nasty/src/: main.rs  notifications.rs
nastyd/: Cargo.toml
nastyd/src/: main.rs  notifications.rs  workspaces.rs
src/: lib.rs  main.rs  notifications.rs  upgrade.rs  weather.rs  workspaces.rs
src/dnote/: client.rs  server.rs
src/workspaces/: hyprland.rs  internal.rs  mod.rs  sway.rs
