[package]
name = "nasty"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI tool to augment eww widgets."
repository= "https://github.com/KGB33/nasty"
readme = "README.md"


[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
ctrlc = { version = "3.0", features = ["termination"] }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
swayipc = "3.0.2"
tokio = { version = "1.36.0", features = ["full"] }
zbus = "4.0.0"
