[package]
name = "nasty"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI tool to augment eww widgets."
repository= "https://github.com/KGB33/nasty"
readme = "README.md"


[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
swayipc = "3.0.2"
tokio = { version = "1.38.0", features = ["full"] }
zbus = "4.3.1"
zvariant = "4.1.2"
