[package]
name = "nasty"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI tool to augment eww widgets."
repository= "https://github.com/KGB33/nasty"
readme = "README.md"


[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
swayipc = "3.0.2"
tokio = { version = "1.41.0", features = ["full"] }
zbus = "5.0.1"
zvariant = "5.0.1"
